contact page done

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.25.3",
+    "epic-spinners": "^2.0.0",
     "nuxt": "^2.15.8",
+    "sweetalert2": "^11.5.1",
     "vue": "^2.7.10",
-    "vue-loading-overlay": "^5.0.3",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   }
